add main example for simulator

--- a/GUI TD/GUI TD.vcxproj.filters
+++ b/GUI TD/GUI TD.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Dependecies\GLAD\src\glad.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="mainSimulator.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
