--- a/GUI TD/GUI TD.vcxproj
+++ b/GUI TD/GUI TD.vcxproj
@@ -143,6 +143,7 @@
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</CompileAsManaged>
     </ClCompile>
     <ClCompile Include="MainForm.cpp" />
+    <ClCompile Include="mainSimulator.cpp" />
     <ClCompile Include="Simulator.cpp" />
   </ItemGroup>
   <ItemGroup>
