--- a/GUI TD/GUI TD.vcxproj
+++ b/GUI TD/GUI TD.vcxproj
@@ -104,6 +104,7 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>
       </AdditionalIncludeDirectories>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
       <AdditionalDependencies>glfw3.lib;glfw3dll.lib;User32.lib;Gdi32.lib;Shell32.lib;opencv_world412d.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
