--- a/GUI TD/GUI TD.vcxproj
+++ b/GUI TD/GUI TD.vcxproj
@@ -107,7 +107,7 @@
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glfw3.lib;glfw3dll.lib;User32.lib;Gdi32.lib;Shell32.lib;opencv_world412d.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glfw3dll.lib;User32.lib;Gdi32.lib;Shell32.lib;opencv_world412d.lib;opengl32.lib;ntdll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
       <EntryPointSymbol>main</EntryPointSymbol>
